Fixed footer widget spacing

--- a/wp-content/themes/ERS/assets/styles/components/_paperclip-components.less
+++ b/wp-content/themes/ERS/assets/styles/components/_paperclip-components.less
@@ -1774,6 +1774,9 @@ footer {
   .tweet > p > a {
     display: block;
   }
+  .widget .panel-body {
+    padding: 0;
+  }
 }
 .copyright {
   padding: 20px 0;
